added more health checks
